--- a/style.css
+++ b/style.css
@@ -18,20 +18,24 @@ h1 {
   font-size: 4.0rem;
 }
 
+h2 {
+  margin-top: 0;
+}
+
 footer {
   text-align: right;
   color: midnightblue;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .tile-image {
   height: 200px;
   float: left;
-  margin-right: 50px;
+  margin-right: 40px;
 }
 
 .card {
-  width: 45%;
+  width: 47%;
 }
 
 .left {
